[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simulations"]

[project]
name = "verbs-examples"
version = "0.1.0"
description = "VERBS simulation examples"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ethereum", "agent-based modelling", "simulation", "defi"]
authors = [
  { name = "Jordan", email = "jordan@simtopia.ai" },
  { name = "Marc", email = "marc@simtopia.ai"}
]
maintainers = [
  { name = "Jordan", email = "jordan@simtopia.ai" },
  { name = "Marc", email = "marc@simtopia.ai"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "verbs == 0.2.2",
  "matplotlib",
  "scipy",
  "pandas",
  "pyarrow"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.dev]
dependencies = [
  "pre-commit >= 3.3.3",
]

[tool.hatch.envs.dev.scripts]
lint = "pre-commit install && pre-commit run --all-files"

[tool.hatch.envs.examples.scripts]
uniswap = "python uniswap_example.py {args}"
aave = "python aave_example.py {args}"

[tool.hatch.envs.sphinx]
dependencies = [
  "sphinx >= 7.2.6",
  "furo >= 2023.9.10",
  "sphinx-copybutton >= 0.5.2",
]

[tool.hatch.envs.sphinx.scripts]
build = "sphinx-build -W -b html docs/source docs/build"
test = "sphinx-build -W -b doctest docs/source docs/build"
